# clog

./: Cargo.toml  README.md
.claude/skills/reproduce/: SKILL.md
skills/: reproduce.md
src/: commands.rs  config.rs  main.rs  server.rs
test-app/: hello-world.py
tests/: e2e.sh
zod-telemetry/: README.md  package.json
