[package]
name = "clog"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ferrucc-io/clog"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
tower-http = { version = "0.6.8", features = ["cors"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
